2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Added
	  null check.

2010-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs:
	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Optimized HighlightUsagesExtension (no additional re-parse).

2010-04-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpFormatter.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Fixed
	  code completion bug.

2010-04-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: fixed
	  possible null ref.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Implemented 'Bug 595598 - Intelligent placing of
	  semi-colons'.


2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpFormatter.cs:
	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Implemented 'Bug 595587 - Move code block to correct depth
	  when Alt+arrow moving'.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	  Fixed 'Bug 595606 - Refactoring (renaming) can alter
	  unrelated classes'.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  de-activated usage highlighting in text link mode.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Made usage highlighter more robust.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: